test_suite/tests/macros/display_case/unknown_attribute_val.rs
use macros::DisplayCase;

#[derive(DisplayCase)]
#[display_case(case = "foocase")]
enum Test {
    Foo,
    Bar,
}

fn main() {}
